<resources>
    <string name="app_name">VibTran</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_phone_num">Phone Number</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed. err: 1"</string>
    <string name="login_failed2">"Login failed. err: 2"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="isMerchant">is Merchant?</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_contact">Contacts</string>
    <string name="email">Email</string>
</resources>